# byvfx_tools

./: .gitignore  MainMenuCommon.xml  NetworkViewMenu.xml  OPmenu.xml  PARMmenu.xml  README.md  pyproject.toml
config/: byvfx_package.json
docs/: VEX_SNIPPET_MANAGER.md
examples/: vex_snippet_integration.py
otls/: byvfx.draw_points.hda  object_brandon.test_play.1.0.hda  object_brandon.test_play.1.1.hda
package/: byvfx_package.json
python3.11libs/byvfx/: __init__.py
python3.11libs/byvfx/tools/: __init__.py
python3.11libs/byvfx/tools/cache_manager/: cacheManager.py
python3.11libs/byvfx/tools/light_converter/: __init__.py  constants.py  converter.py  converters.py  light_converter.py  (+1 more)
python3.11libs/byvfx/utils/: __init__.py  camDB.py  cam_utils.py  color_anim_nodes.py  mass_merger.py  multi_import.py  rel_to_abs.py  splitABC_groups.py  splitABC_path.py  vex_snippet_manager.py
python3.7libs/: lightconverter.py  redshift_to_mantra_function.py
python3.7libs/BY/: mantra_to_redshift_function.py
python3.9libs/: mantra_to_redshift_function.py
python3.9libs/BY/: mantra_to_redshift_function.py
scripts/: arnoldTextureConverter.py  ffmeg.py  fileCacheManager.py  grouped_node_editor.py  hdaDataClean.ipynb  hdaTracker_Binary.py  hdaTracker_multiThreaded.py  hdaTracker_singleThreaded.py  hdas.csv  launch_vex_snippet_manager.py  lightconverter.py  lightconverterUI.py  massObjectMerger.py  rbdConstraintLister.py  redshiftconverter.py  solarisToObj.py  splitABC.py  splitABC_groups.py  splitShopMat.py  splitShopPath.py  tkinter_test.py
toolbar/: byvfx_tools.shelf
